# assignment-1

./: README.md
trading-analytics-backend/: docker-compose.yml
trading-analytics-backend/ingest/: package-lock.json  package.json  producer.js
trading-analytics-backend/rsi-processor/: Cargo.toml
trading-analytics-backend/rsi-processor/src/: config.rs  kafka_consumer.rs  kafka_producer.rs  main.rs  metrics.rs  models.rs  rsi.rs  ws_manager.rs  ws_routes.rs  ws_server.rs
trading-analytics-frontend/: package-lock.json  package.json
trading-analytics-frontend/src/app/: page.tsx
trading-analytics-frontend/src/app/hooks/: useWebSocket.ts
trading-analytics-frontend/src/app/pages/: index.tsx
